wyrównanie tekstu w certyfikatach

--- a/index.html
+++ b/index.html
@@ -17,20 +17,53 @@
 				<img class="animate__animated animate__pulse" src="logo.png" alt="dupa"></img>
 			</div>
 		</header>
+
+
+
 		<div class="mainsection">
 			<div id="onas"><p>Jesteśmy firmą transportową specjalizującą się w transporcie międzynarodowym. Głównymi kierunkami naszych wyjazdów są kraje Europy Zachodniej, takie jak Niemcy, Holandia, Austria i Czechy. <br><br> Wśród naszej floty posiadamy nowoczesne busy i ciężarówki Renault oraz MAN, mogące pomieścić od 8 do 20 palet typu euro, oraz mogące załadować od 1,3 tony do 6,5 tony. Posiadamy także przyczepy, które łącznie z ciężarówką dają możliwość przewiezinia nawet 38 europalet. Gwarantujemy zadowolenie z naszych usług oraz terminowy i rzetelny transport.</p>
 			</div>
+			
+
+
+
 
 			<h2>Dlaczego warto nam zaufać:</h2>
 			<div class="boxy">
-				<div class="box"><img class="hvr-grow" src="certyfikat.png"><br><h4>Certyfikat Sprawdzonego Przewoźnika</h4>Posiadamy certyfikat TCC Elite przyznawany sprawdzownym przewoźnikom na platformie Trans. Potwierdza on stan prawny firmy, jej doświadczenie i reputację, a także potwierdza posiadanie floty pojazdów spełniających najnowsze normy ekologiczne i wyposażonych w system GPS.</div>
-				<div class="box"><img class="hvr-grow" src="zaufanie1.png"><br><h4>100% pozytywnych opinii</h4>Posiadamy 100% pozytywnych ocen na giełdzie Trans. Od 2014 roku setki firm powierzyły nam swoje ładunki i nigdy nie otrzymaliśmy reklamacji wobec wykonanej usługi.</div>
-				<div class="box"><img class="hvr-grow" src="certyfikat2.png"><br><h4>Certyfikat Audytowanej Polisy</h4>Posiadamy certyfikat OPC Audited, który potwierdza posiadanie polisy, która jest aktywna oraz opłacona, a zakres ochrony został dobrany tak, aby w przypadku szkody zapewnić przewoźnikowi ochronę w zakresie wszystkich najczęściej występujących zdarzeń.</div>
+				<div class="box">
+					<div class="">
+						<img src="certyfikat.png">
+						<h4>Certyfikat Sprawdzonego Przewoźnika</h4>
+					</div>
+					<div class="text">Posiadamy certyfikat TCC Elite przyznawany sprawdzownym przewoźnikom na platformie Trans. Potwierdza on stan prawny firmy, jej doświadczenie i 						reputację, a także potwierdza posiadanie floty pojazdów spełniających najnowsze normy ekologiczne i wyposażonych w system GPS.</div>
+				</div>
+				<div class="box">
+					<div class="">
+						<img src="zaufanie1.png">
+						<h4>100% pozytywnych opinii</h4>
+					</div>
+					<div class="text">Posiadamy 100% pozytywnych ocen na giełdzie Trans. Od 2014 roku setki firm powierzyły nam swoje ładunki i nigdy nie otrzymaliśmy reklamacji wobec 						wykonanej usługi.</div>					
+				</div>
+				
+				<div class="box">
+					<div class="">
+						<img src="certyfikat2.png">
+						<h4>Certyfikat Audytowanej Polisy</h4>
+					</div>
+					<div class="text">Posiadamy certyfikat OPC Audited, który potwierdza posiadanie polisy, która jest aktywna oraz opłacona, a zakres ochrony został dobrany tak, aby w przypadku szkody zapewnić przewoźnikowi ochronę w zakresie wszystkich najczęściej występujących zdarzeń.</div>					
+				</div>
 			</div>
+
+
+
+
+
 			<div id="srodek"><p>Chętnie nawiążemy długoterminową współpracę z firmami zainteresowanymi eksportem towaru do Niemiec, Holandii, Czech, Słowenii oraz Austrii. Gwarantujemy atrakcyjne ceny usług transportowych, oraz jesteśmy otwarci na negocjację stawek. Gwarantujemy terminowość oraz solidne wykonanie usług.
 			</p>
 			</div>
 		</div>
+
+		
 		<div class="bottomsection">
 			<div class="danewrapper">
 				<div class="dane raz">
